# non_matching_test_suite

./: .gitignore  CMakeLists.txt  README.md  plotter.ipynb
.github/workflows/: clean_docker.yaml  docker.yaml  purge_images.yaml
DistributedLagrangeMultiplier/: distributed_lagrange.cc  parameters.prm  parmeters.prm
InterfacePenalisation/: nitsche.cc
InterfacePenalisation/1d2d/: smooth_disk.cc  smooth_flower.cc
LagrangeMultiplier/: parameters.prm
LagrangeMultiplier/1d2d/: disk_parameters.prm  lagrange_multiplier.cc
LagrangeMultiplier/2d3d/: lagrange_multiplier.cc  parameters_nonsmooth.prm
Nitsche/: CMakeLists.txt
code/: run.sh
code/.devcontainer/: devcontainer.json
code/examples/: CMakeLists.txt
code/examples/cut_fem/1d2d/: non_smooth_disk.cc  smooth_disk.cc  smooth_flower.cc
code/examples/cut_fem/2d3d/: non_smooth_sphere.cc  smooth_sphere.cc
code/examples/interface_penalisation/1d2d/: non_smooth_disk.cc  smooth_disk.cc  smooth_flower.cc
code/examples/interface_penalisation/2d3d/: interface_penalisation_non_smooth_disk.cc  interface_penalisation_smooth_disk.cc
code/examples/lagrange_multiplier/1d2d/: CMakeLists.txt  lagrange_multiplier.cc  lagrange_multiplier_flower.cc
code/examples/lagrange_multiplier/2d3d/: lagrange_multiplier.cc
code/include/: intersections.h
code/scripts/: non_matching_test_suite.sh  run_all_tests.sh
cutFEM/: CMakeLists.txt  cutFEM.cc
cutFEM/1d2d/: smooth_disk.cc  smooth_flower.cc
data/: lm_1d2d_disk.smooth.prm  lm_1d2d_flower.smooth.prm  lm_2d3d.non_smooth_sphere.prm  lm_2d3d.smooth_sphere.prm
docker/: Dockerfile
environment/: Dockerfile
examples/: CMakeLists.txt
examples/InterfacePenalisation/1d2d/: non_smooth_disk.cc
examples/LagrangeMultiplier/: CMakeLists.txt
examples/LagrangeMultiplier/1d2d/: cmake_install.cmake  flower_parameters.prm  lagrange_multiplier.cc  lagrange_multiplier_flower.cc  non_smooth_parameters.prm
examples/LagrangeMultiplier/2d3d/: parameters_smooth.prm
examples/cutFEM/: CMakeLists.txt
examples/cutFEM/1d2d/: non_smooth_disk.cc  smooth_disk.cc  smooth_flower.cc
examples/cut_fem/: CMakeLists.txt  cut_fem.cc
examples/cut_fem/1d2d/: non_smooth_disk.cc  smooth_disk.cc  smooth_flower.cc
examples/cut_fem/2d3d/: non_smooth_sphere.cc  smooth_sphere.cc  sphere.cc
examples/interface_penalisation/1d2d/: non_smooth_disk.cc  smooth_disk.cc  smooth_flower.cc
examples/interface_penalisation/2d3d/: interface_penalisation.cc  interface_penalisation_non_smooth_disk.cc  interface_penalisation_smooth_disk.cc
examples/lagrange_multiplier/1d2d/: CMakeCache.txt  Makefile  lagrange_multiplier.cc  lagrange_multiplier_flower.cc
examples/lagrange_multiplier/2d3d/: lagrange_multiplier.cc  parameters_nonsmooth.prm
grids/: flower_interface.vtk
include/: coupling_utilities.h  non_matching_utilities.h
metadata/: metadata.yml
parameters/: LM_1d2d_flower_smooth.prm  lm_1d2d_disk.non_smooth.prm  lm_2d3d_sphere_non_smooth.prm  lm_2d3d_sphere_smooth.prm
scripts/: run_all_tests.sh  update_docker_image.sh
src/: CMakeLists.txt  coupling_utilities.cc  intersections.cc
